<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>io.github.kuggek</groupId>
  <artifactId>editor</artifactId>
  <packaging>jar</packaging>
  <version>1.0</version>
  <name>Editor for Java Game Engine</name>
  <url>https://github.com/KuggeK/java-game-engine-editor</url>
  <properties>
    <maven.compiler.source>19</maven.compiler.source>
    <maven.compiler.target>19</maven.compiler.target>
  </properties>
  <dependencies>
    <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-engine -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <version>5.10.2</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>io.github.kuggek</groupId>
      <artifactId>engine</artifactId>
      <version>1.1</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-controls</artifactId>
      <version>22.0.1</version>
    </dependency>
    <dependency>
      <groupId>org.openjfx</groupId>
      <artifactId>javafx-swing</artifactId>
      <version>19</version>
  </dependency>
  <!-- https://mvnrepository.com/artifact/org.openjfx/javafx-fxml -->
  <dependency>
    <groupId>org.openjfx</groupId>
    <artifactId>javafx-fxml</artifactId>
    <version>22.0.1</version>
  </dependency>
  </dependencies>

  <repositories>
    <repository>
      <id>jogamp-remote</id>
      <name>jogamp test mirror</name>
      <url>https://www.jogamp.org/deployment/maven/</url>
    </repository>
  </repositories>

  <build>
    <plugins>
      <plugin>
        <groupId>org.openjfx</groupId>
        <artifactId>javafx-maven-plugin</artifactId>
        <version>0.0.8</version>
        <configuration> 
            <mainClass>io.github.kuggek.editor.GameEngineEditor</mainClass>
            <options>
              <option>--add-exports java.base/java.lang=ALL-UNNAMED</option>
                <option>--add-exports java.desktop/sun.awt=ALL-UNNAMED</option>
                <option>--add-exports java.desktop/sun.java2d=ALL-UNNAMED</option>
            </options>
        </configuration>
    </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>exec-maven-plugin</artifactId>
        <version>3.2.0</version>
        <configuration>
          <mainClass>io.github.kuggek.editor.GameEngineEditor</mainClass>
          <arguments>
            <argument>defaultProject.json</argument>
          </arguments>
          <addResourcesToClasspath>true</addResourcesToClasspath>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-jar-plugin</artifactId>
        <version>3.4.2</version>
        <configuration>
          <archive>
            <manifest>
              <addClasspath>true</addClasspath>
              <mainClass>io.github.kuggek.editor.GameEngineEditor</mainClass>
            </manifest>
          </archive>
        </configuration>
      </plugin>
      <plugin>
        <artifactId>maven-assembly-plugin</artifactId>
        <version>3.7.0</version>
        <configuration>
            <descriptorRefs>
                <descriptorRef>jar-with-dependencies</descriptorRef>
            </descriptorRefs>
            <archive>
              <manifest>
                <mainClass>io.github.kuggek.editor.GameEngineEditor</mainClass>
              </manifest>
            </archive>
        </configuration>
        <executions>
            <execution>
                <id>assemble-all</id>
                <phase>package</phase>
                <goals>
                    <goal>single</goal>
                </goals>
            </execution>
        </executions>
    </plugin>
    </plugins>
  </build>
</project>